Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3792

Pointing proxy.config.dns.resolv_conf at an empty (or nonexistant) file causes segmentation faults on first DNS query

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.0
    • DNS
    • None

    Description

      [connect] ERROR (main_socket_fd 9): Connection refused
      [Jul 22 17:04:34.553] {0x2b293f16b960} ERROR: wrote crash log to /var/log/trafficserver/crash-2015-07-22-170434.log
      traffic_server: Floating point exception (Integer divide by zero [0x6d8e5a])traffic_server - STACK TRACE: 
      traffic_server(_Z19crash_logger_invokeiP7siginfoPv+0xc3)[0x50994e]
      /lib64/libpthread.so.0[0x340d40f710]
      traffic_server[0x6d8e5a]
      traffic_server(_ZN8DNSEntry9mainEventEiP5Event+0x3d3)[0x6d9a95]
      traffic_server(_ZN12Continuation11handleEventEiPv+0x6c)[0x50c838]
      traffic_server(_ZN12DNSProcessor5getbyEPKciiP12ContinuationRKNS_7OptionsE+0x1c1)[0x6d9e45]
      traffic_server(_ZN12DNSProcessor13gethostbynameEP12ContinuationPKcRKNS_7OptionsE+0x44)[0x6ccb30]
      traffic_server(_ZN18HostDBContinuation6do_dnsEv+0x290)[0x6cadbc]
      traffic_server(_ZN18HostDBContinuation10probeEventEiP5Event+0x2bc)[0x6ca8a6]
      traffic_server(_ZN12Continuation11handleEventEiPv+0x6c)[0x50c838]
      traffic_server(_ZN7EThread13process_eventEP5Eventi+0xc6)[0x786d56]
      traffic_server(_ZN7EThread7executeEv+0xa0)[0x786f24]
      traffic_server(main+0x1246)[0x53da75]
      /lib64/libc.so.6(__libc_start_main+0xfd)[0x340cc1ed5d]
      traffic_server[0x4f47a9]
      
      Floating point exception (core dumped)
      

      Attachments

        Activity

          People

            briang Brian Geffon
            jacksontj Thomas Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: