TS-3792: Pointing proxy.config.dns.resolv_conf at an empty (or nonexistant) file causes crashes.